--- a/index.html
+++ b/index.html
@@ -405,6 +405,19 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="footer-sing-up">
+                <h3 class="footer-soc">Підпишіться на розсилку</h3> 
+                <form action="#" class="footer-form">
+                    <input type="text" class="footer-input" name="user-email" id="user-email" placeholder="E-mail" required>
+                    <button type="submit" class="footer-button">Підписатися 
+                        <svg class="footer-button-icon" weight="24" height="24">
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
+            
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -448,14 +461,21 @@
 
                 <div class="user-comment">
                     <label for="user-comment" class="input-label">Коментар</label>
-                    <textarea name="comment" id="user-comment" rows="10" placeholder="Введіть текст"
+                    <textarea name="comment" id="user-comment" placeholder="Введіть текст"
                     class="modal-comment"></textarea>
                 </div>
 
-                <label class="modal-terms-input">
-                    <input type="checkbox" />
-                    Погоджуюся з розсилкою та приймаю <a href="#" class="modal-terms">Умови договору</a>
-                </label>
+                <div class="terms">
+                    <input type="checkbox" name="terms" id="terms" class="modal-check hide"/>
+                   
+                    <label for="terms" class="modal-terms-input">
+                        <span>
+                            <svg class="check-icon" wight="16" height="15">
+                                <use href="./images/icons.svg#icon-check"></use>
+                            </svg>
+                        </span>
+                     Погоджуюся з розсилкою та приймаю <a href="#" class="modal-terms">Умови договору</a></label>
+                </div>
 
                 <button type="submit" class="modal-button">Відправити</button>
             </form>
