--- a/portfolio.html
+++ b/portfolio.html
@@ -213,6 +213,17 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-sing-up">
+                <h3 class="footer-soc">Підпишіться на розсилку</h3> 
+                <form action="#" class="footer-form">
+                    <input type="text" class="footer-input" name="user-email" id="user-email" placeholder="E-mail" required>
+                    <button type="submit" class="footer-button">Підписатися 
+                        <svg class="footer-button-icon" weight="24" height="24">
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 </body>
